# KodeCamp-task-grader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
task_grader/docs/: google_colab.py
task_grader/grading/: evaluator.py  rubric.py
task_grader/lms/: lms_client.py
tests/: test_evaluator.py  test_google_colab_downloader.py  test_rubric.py
