[project]
name = "task-grader"
version = "0.1.0"
description = "CLI + agentic grader/evaluator for KodeCamp promotional tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.5",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
]

[project.scripts]
task-grader = "task_grader.cli:app"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]
